# turnip_api

./: .gitignore  Cargo.toml  Dockerfile  Justfile  README.md
turnip_api/: Cargo.toml
turnip_api/src/: lib.rs  placeholder_url.rs  util.rs
turnip_api/src/endpoints/: external_apis.rs  http_response.rs  mod.rs
turnip_api/src/endpoints/app_auth/: dummy.rs  jwt.rs  mod.rs
turnip_api/src/endpoints/rundown_v1/: mod.rs
turnip_api/src/internal/: api_target.rs  mod.rs
turnip_api_looper/: Cargo.toml
turnip_api_looper/src/: lib.rs
turnip_api_search/: Cargo.toml
turnip_api_search/src/: config.rs  lib.rs  placeholder_url.rs
turnip_api_search/src/conversions/: currency.rs  mod.rs  parser.rs  quantity.rs  time.rs  timezone.rs
turnip_api_search/src/suggestions/: external.rs  mod.rs
turnip_api_search/src/suggestions/conversions/: currency.rs  mod.rs  quantity.rs  time.rs
turnip_api_weather/: Cargo.toml
turnip_api_weather/src/: lib.rs
turnip_server/: Cargo.toml
turnip_server/src/: ext_api.rs  main.rs  util.rs
