[package]
name = "turnip_api_search"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
arrayvec = "0.7.7"
compact_str = "0.9.1"
enum-iterator = "2.3.0"
fnv = "1.0.7"
futures = "0.3.32"
jiff = "0.2.18"
log = "0.4.33"
nom = "8.0.0"
serde_json = "1.0.150"
smol_str = "0.3.6"
turnip_api = { version = "0.1.0", path = "../turnip_api" }
