[package]
name = "turnip_server"
version = "1.0.0"
edition = "2021"

[dependencies]
http-body-util = "0.1.3"
hyper = { version = "1", features = ["server", "http1", "client"] }
hyper-util = { version = "0.1.20", features = [ "tokio" ] }
log = "0.4.33"
pretty_env_logger = "0.5.0"
serde = "1.0.228"
tokio = { version = "1", features = ["full"] }
turnip_api = { version = "1.0.0", path = "../turnip_api" }
turnip_api_looper = { version = "0.1.0", path = "../turnip_api_looper" }
turnip_api_search = { version = "1.0.0", path = "../turnip_api_search" }
turnip_api_weather = { version = "0.1.0", path = "../turnip_api_weather" }
async-rate-limiter = { version = "1", features = ["rt-tokio"] }
http = "1.4.2"
futures = "0.3.32"
lazy_static = "1.5.0"
form_urlencoded = "1.2.2"
reqwest = "0.13.4"

# I thought this would be necessary, but I'm more comfortable using the Dockerfile to link the timezone info in directly
# jiff = { version = "0.2.18", features = ["tzdb-bundle-always"] }
